force-app/main/default/objects/Case/fields/Sent_to_Network__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for RegE</description>
    <label>Sent to Network</label>
    <type>Checkbox</type>
</CustomField>