force-app/main/default/objects/Case/fields/Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Indicator__c</fullName>
    <formula>IMAGE(SDO_URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Status, 
&quot;New&quot;, &quot;015Dn000001P1Eu&amp;oid=00DDn000004NAh5&quot;, 
&quot;Working&quot;,&quot;015Dn000001P1Ev&amp;oid=00DDn000004NAh5&quot;,
&quot;Waiting on customer&quot;, &quot;015Dn000001P1Ew&amp;oid=00DDn000004NAh5&quot;,
&quot;Response Received&quot;,&quot;015Dn000001P1Ex&amp;oid=00DDn000004NAh5&quot;,
&quot;Escalated&quot;, &quot;015Dn000001P1Ey&amp;oid=00DDn000004NAh5&quot;, 
&quot;Warning&quot;,&quot;015Dn000001P1Ez&amp;oid=00DDn000004NAh5&quot;,
&quot;Violation&quot;,&quot;015Dn000001P1F0&amp;oid=00DDn000004NAh5&quot;,
&quot;Closed in Portal&quot;, &quot;015Dn000001P1F1&amp;oid=00DDn000004NAh5&quot;,
&quot;Closed&quot;,&quot;015Dn000001P1F1&amp;oid=00DDn000004NAh5&quot;,
&quot;Closed - First Call&quot;, &quot;015Dn000001P1F1&amp;oid=00DDn000004NAh5&quot;,
&quot;Submitting Feature&quot;,&quot;015Dn000001P1Ey&amp;oid=00DDn000004NAh5&quot;,
&quot;015Dn000001P1Eu&amp;oid=00DDn000004NAh5&quot;),&quot;Status&quot;,24,24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator</label>
    <type>Text</type>
</CustomField>