force-app/main/default/objects/Case/fields/Subscription_Charge__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fraud for Retail</description>
    <label>Subscription Charge</label>
    <type>Checkbox</type>
</CustomField>