force-app/main/default/objects/Case/fields/Suspicious_Activity__c.field-meta.xml
<CustomField>
    <fullName>Suspicious_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fraud for Retail</description>
    <label>Suspicious Activity</label>
    <type>Checkbox</type>
</CustomField>