force-app/main/default/objects/Case/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>Used for RegE</description>
    <label>Transaction Id</label>
    <length>16</length>
    <type>Text</type>
</CustomField>