force-app/main/default/objects/Case/fields/Verified_Fraudulent__c.field-meta.xml
<CustomField>
    <fullName>Verified_Fraudulent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for RegE</description>
    <label>Verified Fraudulent</label>
    <type>Checkbox</type>
</CustomField>