force-app/main/default/objects/Case/listViews/FINS_Treasury_Management_Operations.listView-meta.xml
<ListView>
    <fullName>FINS_Treasury_Management_Operations</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Goldfinch Bicycles</value>
    </filters>
    <label>Treasury Management Operations</label>
</ListView>